--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="top">
-  <div class="bgded overlay light" style="background-image:url('images/demo/backgrounds/01.png');">
+  <div id="bg" class="bgded overlay light">
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
         <ul class="nospace">
@@ -82,7 +82,8 @@
           <h6 class="heading">Eu tincidunt eget viverra at ante donec mattis justo</h6>
           <p>Hendrerit nisl et euismod quam semper eget vel viverra nibh phasellus accumsan mauris elit eget fringilla dolor aliquet id etiam interdum non eros sagittis hendrerit cras ac lectus ut arcu bibendum tincidunt eget id nisl ut.</p>
           <p class="btmspace-30">Iaculis vehicula tristique ut gravida scelerisque mattis non erat a lectus tincidunt maximus aliquam sed ex quis nec maximus urna integer nec est sapien quisque pulvinar bibendum interdum donec a lacus diam cras sem ipsum finibus non volutpat
-            nec&hellip;</p>
+            nec&hellip;
+          </p>
           <footer><a class="btn" href="#">Read More &raquo;</a></footer>
         </div>
         <div class="one_half"><a class="imgover" href="#"><img src="images/demo/480x360.png" alt=""></a></div>
@@ -90,7 +91,7 @@
       <div class="clear"></div>
     </main>
   </div>
-  <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/02.png');">
+  <div id="bg-row2" class="wrapper row2 bgded overlay">
     <section class="hoc container clear">
       <div class="sectiontitle">
         <h6 class="heading">Rhoncus turpis fusce</h6>
@@ -147,7 +148,7 @@
       </ul>
     </figure>
   </div>
-  <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
+  <div id row-3 class="wrapper row2 bgded overlay">
     <section class="hoc container clear">
       <div class="sectiontitle">
         <h6 class="heading">Sociis natoque penatibus et</h6>
@@ -260,7 +261,7 @@
       <footer class="center"><a class="btn" href="#">Rhoncus mi congue &raquo;</a></footer>
     </section>
   </div>
-  <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/04.png');">
+  <div id="bg-row4" class="wrapper row2 bgded overlay">
     <section class="hoc cta clear">
       <div class="sectiontitle">
         <h6 class="heading">Nunc malesuada lorem</h6>
