--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </ul>
       </div>
     </div>
-    <div class="wrapper row1">
-      <header id="header" class="hoc clear">
+    <div id="navbar" class="wrapper row1">
+      <header id="header" class="hoc clear ">
         <div id="logo" class="fl_left">
           <h1><a href="index.html">David, 666th Lucifer street</a></h1>
         </div>
@@ -331,6 +331,8 @@
     </div>
   </div>
   <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+  <script type="text/javascript" src="./main.js">
+  </script>
 </body>
 
 </html>
